# SimpleHTTPServer

./: CMakeLists.txt
src/: main.cpp
src/http_server/: RequestHandler.cpp  RequestHandler.h
src/http_server/manager/: coreManager.cpp  coreManager.hpp
src/http_server/manager/managers/: fileManager.cpp  fileManager.hpp  mediaManager.cpp  mediaManager.hpp
